<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medical Reminder</string>
    <string name="medicineName">Medicine Name</string>
    <string name="medicineType">Medicine Type</string>
    <string name="image">Image</string>
    <string name="dose">Dose</string>
    <string name="schedule">Schedule</string>
    <string name="setSchedule">Schedule</string>
    <string name="interval">Repetition</string>
    <string name="sheduleAndDose">Time And Dose</string>
    <string name="startDay">Start Day</string>
    <string name="duration">Duration</string>
    <string name="instruction">Instruction</string>
    <string name="done">Done</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="name">Name</string>
    <string name="signuppass">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_to">New to MedApp? Sign Up !</string>
    <string name="title_activity_view_med">ViewMedActivity</string>
    <string name="view_med">View Medicine</string>
    <string name="remember_me">Remember Me?</string>
    <string name="med_name">Medicine Name</string>
    <string name="med_photo">Medicine Photo</string>
    <string name="editMedicine">Edit Medicine</string>

    <string-array name="medicines">
        <item>Panadol</item>
        <item>Fusideen</item>
        <item>Tramadol</item>
        <item>Antinal</item>
        <item>Cold and night</item>
        <item>Fusideen</item>
        <item>Tramadol</item>
        <item>Antinal</item>
        <item>Cold and night</item>
        <item>Fusideen</item>
        <item>Tramadol</item>
        <item>Antinal</item>
        <item>Cold and night</item>
    </string-array>

    <string name="Cancel">Cancel</string>
    <string name="Accept">Taken</string>
    <string name="MedicineName">Medicine Name</string>
    <string name="Ok">Ok</string>
    <string name="actionTitle">check medicine</string>
    <string name="btn_send_message">Send Message</string>
    <!-- Activity titles -->
    <string name="activity_location_found">Location Found</string>
    <!-- Action Bar action items -->
    <string name="action_search">Sarch</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>
    <!-- Search -->
    <string name="search_hint">Search color..</string>
    <string-array name="medicineTypes">
        <item>Capsules</item>
        <item>Tablets</item>
        <item>Injection</item>
        <item>Pills</item>
        <item>Sprays</item>
        <item>Patches</item>
        <item>Drops</item>
        <item>Milligrams</item>
    </string-array>
    <string-array name="medicineInterval">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="medicineFullDuration">
        <item>1 Day</item>
        <item>2 Days</item>
        <item>3 Days</item>
        <item>4 Days</item>
        <item>5 Days</item>
        <item>6 Days</item>
        <item>1 Week</item>
        <item>2 Weeks</item>
        <item>3 Weeks</item>
        <item>1 Month</item>
        <item>2 Months</item>
        <item>3 Months</item>
        <item>4 Months</item>
        <item>5 Months</item>
        <item>6 Months</item>
        <item>1 Year</item>
    </string-array>
    <string-array name="medicineInstrutions">
        <item>Before food</item>
        <item>With food</item>
        <item>After food</item>
        <item>No food instruction</item>
    </string-array>

    <string name="title_activity_time_and_dose">TimeAndDoseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="time">Time</string>
    <string name="addTime">Add Time</string>
    <string name="editSchedule">Edit Schedule</string>
    <string name="dismiss">Dismiss</string>
    <string name="please_take">Please take</string>
    <string name="med">Med</string>
    <string name="space"></string>

    
    
</resources>
