<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.projectgui.SignInActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="288dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.17"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/editEmailSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_edittext_up"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="#C5C5C5" />

    <EditText
        android:id="@+id/editPassSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext_down"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#C5C5C5" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="#97C0E6"
        android:text="@string/signin"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="20dp"
        android:text="@string/new_to"
        android:textColor="#79ACDA"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>