<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="200dp"
    android:background="@drawable/curved_shaped"
    android:layout_height="150dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/MedicineName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sarah" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="30dp"
        android:background="@drawable/bbkg"
        android:textSize="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Cancel" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="8dp"
                android:textSize="15dp"
        
                android:layout_marginBottom="5dp"
        
        android:layout_toRightOf="@+id/btnCancel"
        android:background="@drawable/bbkg"
        android:text="@string/Accept" />

</RelativeLayout>