<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="200dp"
    android:layout_height="150dp"
    android:background="@drawable/curved_shaped"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/reminderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/space"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_alignLeft="@+id/btnCancel"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/reminderTextView"
            android:src="@drawable/sarah" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bbkg"
            android:text="@string/dismiss" 
            android:textColor="#ffffff"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="4dp"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bbkg"
            android:text="@string/Ok" 
            android:textColor="#ffffff"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="4dp"/>
    </LinearLayout>

</LinearLayout>