<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg"
    android:orientation="vertical"
    android:padding="20dp" 
    android:weightSum="8">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.35"
        android:text="@string/interval" />

    <LinearLayout
        android:id="@+id/llInterval"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF" 
        android:layout_weight="0.75"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tvInterval"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_right_grey"
            android:layout_marginLeft="170dp"
            android:layout_gravity="center" />

    </LinearLayout>
    
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.35"
            android:text="@string/sheduleAndDose" />

    <LinearLayout
        android:id="@+id/layoutTimeAndDose"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF" 
        android:layout_weight="0.75"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tvTimeAndDose"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="None"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_right_grey"
            android:layout_marginLeft="170dp"
            android:layout_gravity="center" />

    </LinearLayout>
    
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.35"
            android:text="@string/startDay" />

    <LinearLayout
        android:id="@+id/layoutStartDay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF" 
        android:layout_weight="0.75"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tvStartDay"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_right_grey"
            android:layout_marginLeft="170dp"
            android:layout_gravity="center" />

    </LinearLayout>
    
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.35"
            android:text="@string/duration" />

    <LinearLayout
        android:id="@+id/layoutDuration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF" 
        android:layout_weight="0.75"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_right_grey"
            android:layout_marginLeft="170dp"
            android:layout_gravity="center" />

    </LinearLayout>
    
        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.35"
            android:text="@string/instruction" />

    <LinearLayout
        android:id="@+id/layoutInstruction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF" 
        android:layout_weight="0.75"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tvInstruction"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_right_grey"
            android:layout_marginLeft="120dp"
            android:layout_gravity="center" />

    </LinearLayout>
    
    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.75"
        android:background="#97C0E6"
        android:text="@string/done"
        android:textColor="#FFFFFF" />

</LinearLayout>
